--- a/static/styles.css
+++ b/static/styles.css
@@ -302,6 +302,10 @@ section h2 {
   transform: none;  
   box-shadow: none;  
 }  
+
+.btn i{
+  margin-right:1em;
+}
   
 /* Microtransitions for Buttons */  
 .btn,  
