--- a/templates/list_indexes.html
+++ b/templates/list_indexes.html
@@ -24,15 +24,12 @@
         </div>  
     </header>   
   
-    <!-- Navigation Menu -->  
-    <nav>  
-        <ul>  
-            <li><a href="{{ url_for('index') }}">Home</a></li>  
-            <li><a href="{{ url_for('list_indexes') }}">Atlas Search Indexes</a></li>  
-            <li><a href="{{ url_for('manage_evaluators') }}">Manage Evaluators</a></li>
-            
-        </ul>  
-    </nav>  
+    <nav>    
+        <ul >
+            <li><a href="/" class="btn" style="height: 30px; border-radius: 0;"><i class="fa fa-home"></i> Back to Home</a>  </li>
+            <li>&nbsp;</li>
+        </ul> 
+    </nav> 
   
     <main>  
         <section>
