--- a/templates/list_indexes.html
+++ b/templates/list_indexes.html
@@ -114,7 +114,7 @@
                     <div class="form-group">  
                         <label>Embedding Models:</label>  
                         {% for model_name, model_info in embedding_models.items() %}  
-                            <div>  
+                            <div class="checkbox-group">  
                                 <input type="checkbox" id="model_{{ model_name }}" name="embedding_models" value="{{ model_name }}">  
                                 <label for="model_{{ model_name }}">{{ model_name }}</label>  
                             </div>  
